[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/main/puzzle/creature-view-outline.png" type="Texture" id=1]
[ext_resource path="res://assets/main/puzzle/creature-view-mask.png" type="Texture" id=2]
[ext_resource path="res://src/main/world/restaurant/RestaurantScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/world/restaurant/creature-view.gd" type="Script" id=4]
[ext_resource path="res://src/main/world/creature/fat-player.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "fat"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("SceneClip/CreatureSwitcher/Scene:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -89.8812, -104.904 ), Vector2( -89.8812, -104.904 ), Vector2( -89.881, -59.478 ), Vector2( -139.078, 301.161 ) ]
}

[node name="CreatureView" type="Node2D"]
script = ExtResource( 4 )

[node name="SceneClip" type="Control" parent="."]
margin_right = 562.0
margin_bottom = 526.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OvalMask" type="Light2D" parent="SceneClip"]
texture = ExtResource( 2 )
offset = Vector2( 290, 270 )
mode = 3
range_item_cull_mask = 2

[node name="CreatureSwitcher" type="Node2D" parent="SceneClip"]

[node name="Scene" parent="SceneClip/CreatureSwitcher" instance=ExtResource( 3 )]
position = Vector2( -89.8812, -104.904 )

[node name="CreatureSwitchTween" type="Tween" parent="SceneClip/CreatureSwitcher"]

[node name="OvalOutline" type="Sprite" parent="."]
self_modulate = Color( 0.360784, 0.192157, 0.12549, 1 )
z_index = 25
texture = ExtResource( 1 )
centered = false

[node name="FatPlayer" type="AnimationPlayer" parent="."]
anims/fat = SubResource( 1 )
script = ExtResource( 5 )
